@@ -54,6 +54,8 @@
     <string name="pref_screen_on_sum">Manté la pantalla encesa mentres durant la lectura</string>
     <string name="pref_pdf_cover">Mostra cobertes genèriques pels PDFs</string>
     <string name="pref_pdf_cover_sum">Llegir fitxers PDF pot ser llent. Marqueu aquesta casella per millorar el rendiment</string>
+    <string name="pref_show_progress">Mostra el progrés</string>
+    <string name="pref_show_progress_sum">Mostra la pàgina actual com un text petit en el cantó dret</string>
     <!--  Changelog -->
     <string name="changelog_title">Canvis recents</string>
     <string name="changelog_full_title">Història</string>
