@@ -1,0 +1,8 @@
+
+    <resources>
+        <style name="CurrentPage" parent="@android:style/TextAppearance.Small">
+            <item name="android:textSize">10sp</item>
+            <item name="android:textColor">#A0A0A0</item>
+            <item name="android:typeface">monospace</item>
+        </style>
+    </resources>
