@@ -28,7 +28,8 @@ $ 1.4.2
     * Uses a newer version of mupdf: still has memory problems, but errors do not close the app
     * Catalan translation
     * Settings menu
-    * Use more area of the screen 
+    * Use more area of the screen
+    * Current page number is always visible 
 $ END_OF_CHANGE_LOG
   </body>
 </html>
